@@ -1,0 +1,6 @@
+﻿The following people are contributing or have contributed to TSDuck:
+
+Thierry Lelégard (original author, current maintainer)
+Jérôme Lévèque
+Frédéric Peignot
+Tristan Claverie
